--- a/index.html
+++ b/index.html
@@ -11,11 +11,19 @@
 <body>
     <div id="header">
         <h1>My Library</h1>
+        <div>
+            <button type="button" id="login-button">Login</button>
+            <button type="button" id="logout-button">Logout</button>
+            <div  id="user" class="hidden">
+                <div id="current-username"></div>
+                <img src="#" alt="user" id="dp">
+            </div>
+        </div>
     </div>
     <div id="body">
+        <div id="content" class="hidden">
         <div id="sidebar">
             <form action="index.html" method="post" id="input-form">
-
                 <h3>Add Books</h3>
                 <ul>
                     <li>
@@ -23,18 +31,15 @@
                         <input type="text" id="title" name="title" required>
                         <span id="error-title"></span>     
                     </li>
-
                     <li>
                         <label for="author">Author</label>
                         <input type="text" id="author" name="author" required>        
                         <span id="error-author"></span>     
                     </li>
-                    
                     <li>
                         <label for="pages">Total pages</label>
                         <input type="number" id="pages" name="pages">        
                     </li>
-
                     <li>
                         <label for="read" class="switch">Have you read this book yet?</label>
                         <input type="checkbox" name="read" id="read"> 
@@ -43,10 +48,8 @@
             </form>
             <button id="submit">Submit</button>
             <button id="clear">Clear</button>
-
         </div>
-        <div id="cards">
-
+        <div id="cards"></div>
         </div>
     </div>
 </body>
