Adds some basic styling.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
         <section id="add-books">
             <button class="add-book">Add New Book</button>
-            <form action="#">
+            <form action="#" id="add-book-form">
                 <div class="input-pair">
                     <label for="title">Book Title</label>
                     <input type="text" name="title" id="title">
@@ -27,7 +27,7 @@
                     <label for="pages">Number of Pages</label>
                     <input type="number" name="pages" id="pages">
                 </div>
-                <div class="input-pair">
+                <div class="input-pair checkbox">
                     <label for="read-status">Have you read it?</label>
                     <input type="checkbox" name="read-status" id="read-status">
                 </div>
