--- a/index.html
+++ b/index.html
@@ -1,49 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="index.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&display=swap" rel="stylesheet">
     <title>My Library</title>
 </head>
+
 <body>
     <header>
         <h1>My Library</h1>
     </header>
     <main>
         <section id="add-books">
-            <button class="add-book">Add New Book</button>
-            <form action="#" id="add-book-form">
-                <div class="input-pair">
-                    <label for="title">Book Title</label>
-                    <input type="text" name="title" id="title">
-                </div>
-                <div class="input-pair">
-                    <label for="author">Book Author</label>
-                    <input type="text" name="author" id="author">
-                </div>
-                <div class="input-pair">
-                    <label for="pages">Number of Pages</label>
-                    <input type="number" name="pages" id="pages">
-                </div>
-                <div class="input-pair checkbox">
-                    <label for="read-status">Have you read it?</label>
-                    <input type="checkbox" name="read-status" id="read-status">
-                </div>
-                <div class="buttons">
-                    <button type="submit" class="submit">Add</button>
-                    <button type="reset" class="reset">Clear</button>
-                    <button type="button" class="cancel">Cancel</button>    
-                </div>
-            </form>
+            <button class="add-book">+ Add Book</button>
+            <div class="modal hidden">
+                <form action="#" id="add-book-form">
+                    <div class="form-header">
+                        <h2>Add new book</h2>
+                        <button type="button" class="cancel">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                <title>window-close</title>
+                                <path
+                                    d="M13.46,12L19,17.54V19H17.54L12,13.46L6.46,19H5V17.54L10.54,12L5,6.46V5H6.46L12,10.54L17.54,5H19V6.46L13.46,12Z" />
+                            </svg>
+                        </button>
+                    </div>
+                    <div class="input-pair">
+                        <label for="title" hidden>Book Title</label>
+                        <input type="text" name="title" id="title" placeholder="Book Title" required>
+                    </div>
+                    <div class="input-pair">
+                        <label for="author" hidden>Book Author</label>
+                        <input type="text" name="author" id="author" placeholder="Book Author" required>
+                    </div>
+                    <div class="input-pair">
+                        <label for="pages" hidden>Number of Pages</label>
+                        <input type="number" name="pages" id="pages" placeholder="Number of Pages" required>
+                    </div>
+                    <div class="input-pair checkbox">
+                        <label for="read-status">Have you read it?</label>
+                        <input type="checkbox" name="read-status" id="read-status">
+                    </div>
+                    <div class="buttons">
+                        <button type="submit" class="submit">Add</button>
+                        <button type="reset" class="reset">Clear</button>
+                    </div>
+                </form>
+            </div>
         </section>
         <section id="display-books">
             <div class="display-books-wrapper"></div>
         </section>
     </main>
     <footer>
-        <p>Project by <a href="https://github.com/Ashish-Krishna-K">Ashish-Krishna-K</a></p>
+        <p>
+            Project by <a href="https://github.com/Ashish-Krishna-K">Ashish-Krishna-K</a>
+        </p>
+        <p>
+            Designed inspiration <a href="https://michalosman.github.io/library/">michalosman</a>
+        </p>
     </footer>
 </body>
+
 </html>
